B&L QA/objects/Account_Profile__c.object
<CustomObject>
    <description>To store profile questions related to Account</description>
    <fields>
        <fullName>ASC_Hospital_Owned_By__c</fullName>
        <label>ASC Hospital Owned By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>(Account__r.ShippingStreet  + &apos; &apos; + Account__r.ShippingCity  + &apos; &apos; + Account__r.ShippingState  + &apos; &apos; + Account__r.ShippingPostalCode)</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Buys_Inventories__c</fullName>
        <description>Does this account buy inventories?</description>
        <inlineHelpText>Does this account buy inventories?</inlineHelpText>
        <label>Account Buys Inventories?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Participation__c</fullName>
        <description>Account is Participating in a Clinical Trial?</description>
        <inlineHelpText>Account is Participating in a Clinical Trial?</inlineHelpText>
        <label>Account Participation?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Profiles</relationshipLabel>
        <relationshipName>Account_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Advantage_Price__c</fullName>
        <label>Advantage Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advantage_Product__c</fullName>
        <label>Advantage Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advantage_Relationship__c</fullName>
        <label>Advantage Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advantage_Service__c</fullName>
        <label>Advantage Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AirOptix_Fit__c</fullName>
        <inlineHelpText>Does this Account have an AirOptix Fit Set?</inlineHelpText>
        <label>AirOptix Fit Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Segmentation__c</fullName>
        <label>Alternate Segmentation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ann_Wholesale_Soft_Contact_Lens__c</fullName>
        <description>Annual Wholesale Sales derived from Monthly Wholesale Sales</description>
        <formula>(Total_Monthly_Wholesale_Soft_Contact_Len__c * 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Wholesale Sales derived from Monthly Wholesale Sales</inlineHelpText>
        <label>Ann. Wholesale Soft Contact Lens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>IndiaSU field to collect subdivision of geographic region of the account located</description>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ambala</fullName>
                </value>
                <value>
                    <fullName>Amritsar</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Chandigarh</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Trichy</fullName>
                </value>
                <value>
                    <fullName>Cochin</fullName>
                </value>
                <value>
                    <fullName>Coimbatore</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Indore</fullName>
                </value>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
                <value>
                    <fullName>Jallandhar, Ludhiana</fullName>
                </value>
                <value>
                    <fullName>Kolkata</fullName>
                </value>
                <value>
                    <fullName>Lucknow</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Mumbai -West</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Rajkot</fullName>
                </value>
                <value>
                    <fullName>Surat</fullName>
                </value>
                <value>
                    <fullName>Vadodra</fullName>
                </value>
                <value>
                    <fullName>Hooghly</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>North1</fullName>
                </value>
                <value>
                    <fullName>North2</fullName>
                </value>
                <value>
                    <fullName>강남구</fullName>
                </value>
                <value>
                    <fullName>강동구</fullName>
                </value>
                <value>
                    <fullName>강북구</fullName>
                </value>
                <value>
                    <fullName>강서구</fullName>
                </value>
                <value>
                    <fullName>관악구</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_Focus__c</fullName>
        <description>Stores this site&apos;s main area of focus for their business.
Used by EMEA SU.</description>
        <label>Area of Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akreos MICs Lens</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>MICS</fullName>
                </value>
                <value>
                    <fullName>VR Other</fullName>
                </value>
                <value>
                    <fullName>CAT</fullName>
                </value>
                <value>
                    <fullName>CAT/ VR</fullName>
                </value>
                <value>
                    <fullName>CAT/ REF</fullName>
                </value>
                <value>
                    <fullName>CAT/ VR/ REF</fullName>
                </value>
                <value>
                    <fullName>IOL Monofocal</fullName>
                </value>
                <value>
                    <fullName>IOL Toric</fullName>
                </value>
                <value>
                    <fullName>IOL Premium</fullName>
                </value>
                <value>
                    <fullName>Anterior</fullName>
                </value>
                <value>
                    <fullName>Posterior</fullName>
                </value>
                <value>
                    <fullName>Stellaris Elite</fullName>
                </value>
                <value>
                    <fullName>Stellaris Elite Posterior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Cataract_Procedure_Price__c</fullName>
        <description>Stores the average cost of cataract procedures undertaken at this site.
Used by EMEA SU.</description>
        <label>Average Cataract Procedure Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Premium_IOL_Price__c</fullName>
        <description>Stores the average cost of premium IOL procedures undertaken at this site.
Used by EMEA SU.and USSUR</description>
        <label>Average Premium IOL Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_VR_Procedure_Price__c</fullName>
        <description>Stores the average cost of vitreo-retinal procedures undertaken at this site.
Used by EMEA SU.and USSUR</description>
        <label>Average VR Procedure Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BNL_Share_of_New_Refit_SVS_patients__c</fullName>
        <description>What is B&amp;L&apos;s share of this office&apos;s new/refit SVS patients?</description>
        <inlineHelpText>What is B&amp;L&apos;s share of this office&apos;s new/refit SVS patients?</inlineHelpText>
        <label>BNL Share of New/Refit SVS patients</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_L_Contract_Commencement_Date__c</fullName>
        <label>B+L Contract Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>B_L_Contract_Expiration_Date__c</fullName>
        <label>B+L Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand_of_Choice_Lens_Care__c</fullName>
        <label>Brand of Choice - Lens Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RepleniSH</fullName>
                </value>
                <value>
                    <fullName>Clear Care</fullName>
                </value>
                <value>
                    <fullName>renu</fullName>
                </value>
                <value>
                    <fullName>SOLO-care AQUA</fullName>
                </value>
                <value>
                    <fullName>OPTI-FREE Express</fullName>
                </value>
                <value>
                    <fullName>Complete Easy Rub</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cataract_Procedure_Volume_ANZ__c</fullName>
        <formula>BLANKVALUE(Premium_IOL_Volume__c, 0) +  
BLANKVALUE(Monofocal_IOL_1_Volume__c, 0) +  
BLANKVALUE(Toric_IOL_Volume__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cataract Procedure Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cataract_Procedure_Volume__c</fullName>
        <description>Stores the average number of cataract procedures undertaken at this site.
Used by EMEA SU and USSUR</description>
        <inlineHelpText>Annual</inlineHelpText>
        <label>Cataract Procedure Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinical_Trials_For__c</fullName>
        <description>Clinical Trial For?</description>
        <inlineHelpText>Clinical Trial For?</inlineHelpText>
        <label>Clinical Trials For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Lens Solution</fullName>
                </value>
                <value>
                    <fullName>MultiFocal</fullName>
                </value>
                <value>
                    <fullName>SVS</fullName>
                </value>
                <value>
                    <fullName>Toric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Contract_Expiration_Date__c</fullName>
        <description>USSUR Expiration date of a contract/buying agreeement.  Potentially set workflow to have rep contact account x days before the expiration date (future enhancement)</description>
        <label>Competitive Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitive_Contract_in_Place__c</fullName>
        <description>USSUR is there a buying agreement in place</description>
        <inlineHelpText>Does this account have a contract/buying agreement in place with a specific company?</inlineHelpText>
        <label>Competitive Contract in Place?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Contract_Commencement_Date__c</fullName>
        <label>Competitor Contract Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_Contract_Expiration_Date__c</fullName>
        <label>Competitor Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comprehensive_Eye_Exams_Per_Week_ECS__c</fullName>
        <description>ECS Field</description>
        <label>Comprehensive Eye Exams Per Week (ECS)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comprehensive_Eye_Exams_Per_Week__c</fullName>
        <description>How many comprehensive eye exams are seen in this office per week?</description>
        <inlineHelpText>How many comprehensive eye exams are seen in this office per week?</inlineHelpText>
        <label>Comprehensive Eye Exams Per Week</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Lens_Patient_New_To_Contact_Lens__c</fullName>
        <description>What percent of this office&apos;s contact lens patients are NEW to contact lenses?</description>
        <inlineHelpText>What percent of this office&apos;s contact lens patients are NEW to contact lenses?</inlineHelpText>
        <label>Contact Lens Patient New To Contact Lens</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact_Lens_Sales__c</fullName>
        <label>Contact Lens Sales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Super Sized</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contr_Rel_if_Other__c</fullName>
        <description>USSUR</description>
        <label>Contr/Rel if &quot;Other&quot;</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Bundle_Agreement__c</fullName>
        <description>USSUR</description>
        <label>Contract/Bundle Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>B+L</fullName>
                </value>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>ALCON</fullName>
                </value>
                <value>
                    <fullName>ZEISS</fullName>
                </value>
                <value>
                    <fullName>HOYA</fullName>
                </value>
                <value>
                    <fullName>RAYNER</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Details__c</fullName>
        <label>Contract Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Relationship__c</fullName>
        <description>USSUR</description>
        <label>Contract/Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amerinet</fullName>
                </value>
                <value>
                    <fullName>ASCOA</fullName>
                </value>
                <value>
                    <fullName>Broadlane</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthsouth</fullName>
                </value>
                <value>
                    <fullName>IPA</fullName>
                </value>
                <value>
                    <fullName>MedAssets</fullName>
                </value>
                <value>
                    <fullName>Midwest Surgical</fullName>
                </value>
                <value>
                    <fullName>Non Affiliated</fullName>
                </value>
                <value>
                    <fullName>Novamed</fullName>
                </value>
                <value>
                    <fullName>Novation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>IndiaSU field to collect the country of account</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Patient_Education_Resources__c</fullName>
        <label>Current Patient Education Resources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Panorama</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Practice_Development_Resources__c</fullName>
        <label>Current Practice Development Resources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Service</fullName>
                </value>
                <value>
                    <fullName>Practice Observation</fullName>
                </value>
                <value>
                    <fullName>Staff Education</fullName>
                </value>
                <value>
                    <fullName>Clinical Education</fullName>
                </value>
                <value>
                    <fullName>Outcomes Analysis</fullName>
                </value>
                <value>
                    <fullName>Post Ops</fullName>
                </value>
                <value>
                    <fullName>Business Review</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>Determines whether the customer is a public organisation or private one. Subtype dependent picklist active when &quot;Private Group&quot; is chosen.
Used by EMEA SU.</description>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private Group</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_ABC_Classification__c</fullName>
        <description>DASRX ABC Classification from Peoplesoft</description>
        <label>ABC Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Antiinfectives__c</fullName>
        <label>Antiinfectives</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Business_Size__c</fullName>
        <inlineHelpText>Please select a number of patients by year</inlineHelpText>
        <label>Business Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 1000</fullName>
                </value>
                <value>
                    <fullName>1001 - 1500</fullName>
                </value>
                <value>
                    <fullName>1501 - 2000</fullName>
                </value>
                <value>
                    <fullName>2001 - 2500</fullName>
                </value>
                <value>
                    <fullName>over 2500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Classification__c</fullName>
        <description>DASRX ABC Classification recommended by sales rep</description>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Contact_Lenses__c</fullName>
        <label>Contact Lenses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fitter</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Customer_Location__c</fullName>
        <label>Customer Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Country/National</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Mall</fullName>
                </value>
                <value>
                    <fullName>Train Station</fullName>
                </value>
                <value>
                    <fullName>Medical/Doc House</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Dry_Eye__c</fullName>
        <label>Dry Eye</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Glaucoma__c</fullName>
        <label>Glaucoma</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Main_Focus__c</fullName>
        <label>Main Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>alle OP-Arten</fullName>
                </value>
                <value>
                    <fullName>alles am Hinterabschnitt</fullName>
                </value>
                <value>
                    <fullName>alles am Vorderabschnitt</fullName>
                </value>
                <value>
                    <fullName>Glaskörper</fullName>
                </value>
                <value>
                    <fullName>Glaukom</fullName>
                </value>
                <value>
                    <fullName>Hornhaut</fullName>
                </value>
                <value>
                    <fullName>Injektionen/Anti-VEGF</fullName>
                </value>
                <value>
                    <fullName>Katarakt</fullName>
                </value>
                <value>
                    <fullName>Lidchirurgie</fullName>
                </value>
                <value>
                    <fullName>Netzhaut</fullName>
                </value>
                <value>
                    <fullName>PDT</fullName>
                </value>
                <value>
                    <fullName>Plastisch</fullName>
                </value>
                <value>
                    <fullName>Refraktiv (Lasik, Lasek, PRK)</fullName>
                </value>
                <value>
                    <fullName>Schiel-OP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Main_Supplier__c</fullName>
        <label>Main Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alcon</fullName>
                </value>
                <value>
                    <fullName>Allergan</fullName>
                </value>
                <value>
                    <fullName>Anzag</fullName>
                </value>
                <value>
                    <fullName>Gehe</fullName>
                </value>
                <value>
                    <fullName>Merck</fullName>
                </value>
                <value>
                    <fullName>Noweda</fullName>
                </value>
                <value>
                    <fullName>Pfizer</fullName>
                </value>
                <value>
                    <fullName>Phönix</fullName>
                </value>
                <value>
                    <fullName>Privat</fullName>
                </value>
                <value>
                    <fullName>Sanacorp</fullName>
                </value>
                <value>
                    <fullName>Ursa</fullName>
                </value>
                <value>
                    <fullName>andere</fullName>
                </value>
                <value>
                    <fullName>v.d. Linde</fullName>
                </value>
                <value>
                    <fullName>Bausch and Lomb</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Micronutrition__c</fullName>
        <label>Micronutrition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_NSAID__c</fullName>
        <label>NSAID&apos;s</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Number_of_Cash_Registers__c</fullName>
        <label>Number of Cash Registers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DASRX_Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>